--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,9 @@
   <uses-permission
      android:name="android.permission.ACCESS_FINE_LOCATION"/> 
   <uses-permission 
-  	 android:name="android.permission.ACCESS_NETWORK_STATE" />     
+  	 android:name="android.permission.ACCESS_NETWORK_STATE" />
+ <uses-permission 
+ 	 android:name="android.permission.ACCESS_MOCK_LOCATION"></uses-permission>     
   <uses-permission
      android:name="android.permission.INTERNET"/>
   <uses-permission
