--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,8 @@
        android:icon="@drawable/icon" 
        android:label="@string/app_name">
         <activity android:name=".MyGoogleMap"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action 
                    android:name="android.intent.action.MAIN" />
